--- a/preamble.tex
+++ b/preamble.tex
@@ -2,7 +2,7 @@
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{color}
-\usepackage{hyperref}
+\usepackage[colorlinks=true]{hyperref}
 
 \newcommand{\Nbb}[0]{\mathbb{N}}
 \newcommand{\Zbb}[0]{\mathbb{Z}}
