--- a/main.tex
+++ b/main.tex
@@ -42,5 +42,6 @@ Corrections of any typos or inaccuracies are always welcome, also using the pull
 \input{lecture23}
 \input{lecture24}
 \input{extra_lecture01}
+\input{extra_lecture02}
 
 \end{document}
