--- a/preamble.tex
+++ b/preamble.tex
@@ -41,6 +41,7 @@
 \newcommand{\Abb}[0]{\mathbb{A}}
 \newcommand{\Ibb}[0]{\mathbb{I}}
 \newcommand{\Cfrak}[0]{\mathfrak{C}}
+\newcommand{\Xfrak}[0]{\mathfrak{X}}
 
 \newcommand{\todo}[2]{{\color{red}#1}\footnote{#2}}
 
